--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8" />
-    <title>Japan Tourism</title>
+    <title>Japan Tourism *</title>
     <meta name="description" content="Japan Tourism es la agencia oficial del Gobierno de Japón">
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="images/favicon.ico" type="image/png"/>
